Refactor routing and image handling: Update routes for OpenMolenDetailsComponent and enhance image navigation in ImageSelectorComponent

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -38,7 +38,7 @@
       </p>
 
       <p><strong>Plaats:</strong> {{ molen.plaats }}</p>
-      <p><strong>Adres:</strong> {{ molen.adres }}</p>
+      <p *ngIf="molen.adres"><strong>Adres:</strong> {{ molen.adres }}</p>
       <p *ngIf="molen.provincie">
         <strong>Provincie:</strong> {{ molen.provincie }}
         <span *ngIf="molen.gemeente"
