--- a/molenapplicatie.client/src/app/image-selector/image-selector.component.html
+++ b/molenapplicatie.client/src/app/image-selector/image-selector.component.html
@@ -6,7 +6,7 @@
     *ngIf="selectedImage"
   >
     <img
-      (click)="openImage()"
+      (click)="routeToImage()"
       [src]="selectedImage.filePath"
       alt="Selected Image"
     />
