feat(molen-dialog): enhance dialog header and add full name display for molen style(image-selector): adjust main image height for better responsiveness style(popup): add box shadow to popup container for improved aesthetics style(global): update dialog panel width and restore media query for body background

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -1,5 +1,5 @@
 <section class="dialog-header" *ngIf="molen">
-  <span *ngIf="molen">{{ molen.name }}</span>
+  <span class="dialog-header-title" *ngIf="molen">{{ molen.name }}</span>
   <div class="actions">
     <button class="default-button" (click)="uploadImage()">
       Voeg foto toe
@@ -25,6 +25,7 @@
   <div class="data molen-data" [ngClass]="{ expanded: isExpanded }">
     <div class="molen-data-div">
       <h2>Details</h2>
+      <p *ngIf="molen.name"><strong>Volledige Naam:</strong> {{ molen.name }}</p>
       <p><strong>Ten Brugge Nr:</strong> {{ molen.ten_Brugge_Nr }}</p>
       <p *ngIf="molen.functie"><strong>Functie:</strong> {{ molen.functie }}</p>
       <p><strong>Toestand:</strong> {{ molen.toestand || "Onbekend" }}</p>
