--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
@@ -11,6 +11,14 @@
   padding: 10px;
 }
 
+.dialog-header-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 80%;
+  display: inline-block;
+}
+
 .molen-data {
   width: 60%;
   overflow: hidden;
@@ -24,8 +32,28 @@
 }
 
 .molen-data.expanded {
+  overflow-y: auto;
   max-height: none;
-  overflow: scroll;
+  margin-right: 5px;
+
+  &::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #28a745;
+    border-radius: 10px;
+    border: 4px solid transparent;
+  }
+
+  scrollbar-width: 20px;
+  .toggle-btn {
+    margin-bottom: 20px;
+  }
 }
 
 .molen-data-div {
@@ -108,7 +136,6 @@
   color: red;
   border: 2px solid #f44336;
   border-radius: 100%;
-  float: right;
 }
 
 .close-btn:hover {
@@ -151,11 +178,24 @@
 
 @media only screen and (max-width: $Media_width) {
   .container {
-    width: 95vw;
+    width: 100vw;
     display: block;
   }
 
   .data {
-    width: 90%;
+    width: calc(100% - 20px);
+  }
+
+  .molen-data {
+    overflow-y: auto;
+    max-height: none;
+
+    .toggle-btn {
+      display: none;
+    }
+  }
+
+  .dialog-header-title {
+    max-width: 100%;
   }
 }
