--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -7,12 +7,6 @@ body {
   background-size: cover;
 }
 
-@media only screen and (max-width: $Media_width) {
-  body {
-    background-size: cover;
-  }
-}
-
 /*Global dialog styling*/
 
 .dialog-header {
@@ -33,7 +27,7 @@ body {
 
 .cdk-overlay-pane.mat-mdc-dialog-panel {
   z-index: 1002;
-  max-width: 100vw !important;
+  max-width: 70vw !important;
   max-height: 95vh !important;
   position: absolute;
   top: 0;
@@ -306,6 +300,13 @@ body {
 }
 
 @media only screen and (max-width: $Media_width) {
+  body {
+    background-size: cover;
+  }
+
+  .cdk-overlay-pane.mat-mdc-dialog-panel {
+    max-width: 100vw !important;
+  }
   .molen-details .mdc-dialog__surface,
   .upload-image .mdc-dialog__surface {
     overflow-y: scroll;
