--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -25,7 +25,9 @@
   <div class="data molen-data" [ngClass]="{ expanded: isExpanded }">
     <div class="molen-data-div">
       <h2>Details</h2>
-      <p *ngIf="molen.name"><strong>Volledige Naam:</strong> {{ molen.name }}</p>
+      <p *ngIf="molen.name">
+        <strong>Volledige Naam:</strong> {{ molen.name }}
+      </p>
       <p><strong>Ten Brugge Nr:</strong> {{ molen.ten_Brugge_Nr }}</p>
       <p *ngIf="molen.functie"><strong>Functie:</strong> {{ molen.functie }}</p>
       <p><strong>Toestand:</strong> {{ molen.toestand || "Onbekend" }}</p>
