--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -33,6 +33,10 @@ body {
   top: 0;
 }
 
+.selected-image.cdk-overlay-pane.mat-mdc-dialog-panel {
+  max-width: 100vw !important;
+}
+
 .cdk-overlay-pane {
   pointer-events: auto;
   box-sizing: border-box;
