fix(root.component): comment out Update molens button for future implementation

--- a/molenapplicatie.client/src/app/root/root.component.html
+++ b/molenapplicatie.client/src/app/root/root.component.html
@@ -84,7 +84,7 @@
 <div *ngIf="!error" class="container">
   <div class="allButtons">
     <h2>Menu</h2>
-    <div class="topButton" (click)="updateMolens()">Update molens</div>
+    <!-- <div class="topButton" (click)="updateMolens()">Update molens</div> -->
     <div class="topButton" (click)="searchForNewMolens()">
       Zoek voor nieuwe molens
     </div>
